# varlib

./: LICENSE  README.md  pyproject.toml
examples/: demo.py  demo_completo.py  demo_offline.py  estudio_empirico.py
tests/: __init__.py  conftest.py  test_backtesting.py  test_base.py  test_comparison.py  test_console.py  test_dynamic.py  test_garch.py  test_historical.py  test_loader.py  test_montecarlo.py  test_parametric.py  test_plots.py  test_reports.py
varlib/: __init__.py
varlib/data/: __init__.py  loader.py
varlib/models/: __init__.py  base.py  garch_montecarlo.py  garch_parametric.py  historical.py  montecarlo.py  parametric.py
varlib/reporting/: __init__.py  console.py  plots.py  reports.py
varlib/validation/: __init__.py  backtesting.py  comparison.py  dynamic.py
